CHANGE START SCRIPT

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "build": "npx ts-node build.ts",
     "lint": "npx eslint --ext .ts src/",
     "lint:tests": "npx eslint --ext .ts spec/",
-    "start": "node -r module-alias/register ./dist --env=production",
-    "dev": "nodemon",
+    // "start": "node -r module-alias/register ./dist --env=production",
+    "start": "nodemon",
     "test": "nodemon --config ./spec/nodemon.json",
     "test:no-reloading": "npx ts-node --files -r tsconfig-paths/register ./spec",
     "peerjs": "npx peerjs --port 9000"
